compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__echo_followed_by_invalid_message.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "echo 11 as { True || False }"
---
----- SOURCE CODE
echo 11 as { True || False }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:12
  │
1 │ echo 11 as { True || False }
  │            ^^^^^^^^^^^^^^^^^

Expected type:

    String

Found type:

    Bool
