compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__echo_followed_by_no_expression.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: echo
---
error: Invalid echo use
  ┌─ /src/one/two.gleam:1:1
  │
1 │ echo
  │ ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
