compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__echo_followed_by_no_expression_6.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub fn main() {\n  [echo, 1, 2]\n}\n"
---
error: Invalid echo use
  ┌─ /src/one/two.gleam:3:4
  │
3 │   [echo, 1, 2]
  │    ^^^^ I was expecting a value after this

The `echo` keyword should be followed by a value to print.
